--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
   </head>
 
   <body>
-    <h1>Что в мире творится, а?</h1>
+    <h1 class="header">Что в мире творится?</h1>
+    <script src="<%= htmlWebpackPlugin.files.chunks.main.entry %>"></script>
   </body>
 </html>
