сверстаны блоки author и footer с адаптивом

--- a/src/index.html
+++ b/src/index.html
@@ -88,7 +88,7 @@
       </section>
 
       <section class="author">
-        <img src="" alt="" class="author__image">
+        <img src="<%=require('../blocks/author/__image/me.jpg')%>" alt="author" class="author__image">
         <div class="author__about">
           <h3 class="author__title">Об авторе</h3>
           <p class="author__info"> Это блок с описаением автора проекта. Здесь следует указать, как вас зовут, чем вы занимаетесь, какими технологиями разработки владете.</p>
@@ -99,18 +99,18 @@
     </main>
 
     <footer class="footer">
-      <p class="footer__copyright"></p>
+      <p class="footer__copyright">&copy; 2019 Supersite</p>
       <nav class="footer__menu">
-        <a href="" class="footer__ref">Главная</a>
-        <a href="" class="footer__ref">О проекте</a>
-        <a href="" class="footer__ref">Яндекс.Практикум</a>
+        <a href="" class="footer__link link">Главная</a>
+        <a href="" class="footer__link link">О проекте</a>
+        <a href="" class="footer__link link">Яндекс.Практикум</a>
       </nav>
       <nav class="footer__social">
-        <a href="" class="footer__icon">
-          <img src="" alt="GitHub">
+        <a href="#" class="footer__icon link">
+          <img src="<%=require('../images/Git.jpg')%>" alt="GitHub">
         </a>
-        <a href="" class="footer__icon">
-          <img src="" alt="VKontakte">
+        <a href="#" class="footer__icon link">
+          <img src="<%=require('../images/vk.png')%>" alt="VKontakte">
         </a>
       </nav>
     </footer>
