--- a/src/index.html
+++ b/src/index.html
@@ -19,10 +19,10 @@
       <div class="header__menu">
         <nav class="header__refs">
           <a href="#" class="header__ref link">Главная</a>
-          <a href="../pages/about.html" class="header__ref header__ref_no-active link">О проекте</a>
+          <a href="../pages/about.html" class="header__ref header__ref_grey link">О проекте</a>
         </nav> 
         <div class="header__decor header__decor_right"></div>
-        <div class="header__decor header__decor_active header__decor_left"></div>
+        <div class="header__decor header__decor_white header__decor_left"></div>
       </div>
     </header>
 
