--- a/src/index/index.html
+++ b/src/index/index.html
@@ -8,8 +8,8 @@
     <meta name="keywords" content="HTML-5, CSS-3, JavaScript, ES6, Webpack, Git, gh-pages">
     <meta name="author" content="Михаил Данилов">
     <title>WhatsNew</title>
-    <link rel="stylesheet" href="<%=htmlWebpackPlugin.files.chunks.main.css %>">
-    <link rel="icon" href="<%=require('../images/main.png')%>">
+    <link rel="stylesheet" href="<%=htmlWebpackPlugin.files.chunks.index.css %>">
+    <link rel="icon" href="<%=require('../../images/main.png')%>">
   </head>
 
   <body class="body">
@@ -19,7 +19,7 @@
       <div class="header__menu">
         <nav class="header__refs">
           <a href="#" class="header__ref link">Главная</a>
-          <a href="../pages/about.html" class="header__ref header__ref_grey link">О проекте</a>
+          <a href="../about.html" class="header__ref header__ref_grey link">О проекте</a>
         </nav> 
         <div class="header__decor header__decor_right"></div>
         <div class="header__decor header__decor_white header__decor_left"></div>
@@ -42,46 +42,46 @@
       <section class="result">
         <div class="result__headers">
           <h3 class="result__title">Результаты поиска</h3>
-          <a href="../pages/analytics.html" class="result__ref link">Посмотреть аналитику</a>
+          <a href="../analytics.html" class="result__ref link">Посмотреть аналитику</a>
         </div>
         <div class="result__item-container">
           <div class="result__item">
-            <img src="<%=require('../images/image_01.jpg')%>" alt="image-1" class="result__image">
+            <img src="<%=require('../../images/image_01.jpg')%>" alt="image-1" class="result__image">
             <p class="result__date">2 августа, 2019</p>
             <h4 class="result__item-title">Национальное достояние – парки</h4>
             <p class="result__text">В 2016 году Америка отмечала важный юбилей: сто лет назад здесь начала складываться система национальных парков – охраняемых территорий, где и сегодня каждый может приобщиться к природе.</p>
             <p class="result__media">ЛЕНТА.РУ</p>
           </div>
           <div class="result__item">
-            <img src="<%=require('../images/image_04.jpg')%>" alt="image-2" class="result__image">
+            <img src="<%=require('../../images/image_05.jpg')%>" alt="image-2" class="result__image">
             <p class="result__date">2 августа, 2019</p>
             <h4 class="result__item-title">Лесные огоньки: история одной фотографии</h4>
             <p class="result__text">Фотограф отвлеклась от освещения суровой политической реальности Мексики, чтобы запечатлеть ускользающую красоту одного из местных чудес природы.</p>
             <p class="result__media">МЕДУЗА</p>
           </div>
           <div class="result__item">
-            <img src="<%=require('../images/image_05.jpg')%>" alt="image-3" class="result__image">
+            <img src="<%=require('../../images/image_07.jpg')%>" alt="image-3" class="result__image">
             <p class="result__date">2 августа, 2019</p>
             <h4 class="result__item-title">«Первозданная тайга»: новый фотопроект Игоря Шпиленка</h4>
             <p class="result__text">Знаменитый фотограф снимает первозданные леса России, чтобы рассказать о необходимости их сохранения. В этот раз он отправился в Двинско-Пинежскую тайгу, где...</p>
             <p class="result__media">РИА</p>
           </div>
           <div class="result__item">
-            <img src="<%=require('../images/image_06.jpg')%>" alt="image-4" class="result__image">
+            <img src="<%=require('../../images/image_06.jpg')%>" alt="image-4" class="result__image">
             <p class="result__date">2 августа, 2019</p>
             <h4 class="result__item-title">Национальное достояние – парки</h4>
             <p class="result__text">В 2016 году Америка отмечала важный юбилей: сто лет назад здесь начала складываться система национальных парков – охраняемых территорий, где и сегодня каждый может приобщиться к природе.</p>
             <p class="result__media">ДЗЕН</p>
           </div>
           <div class="result__item">
-            <img src="<%=require('../images/image_07.jpg')%>" alt="image-5" class="result__image">
+            <img src="<%=require('../../images/image_08.jpg')%>" alt="image-5" class="result__image">
             <p class="result__date">2 августа, 2019</p>
             <h4 class="result__item-title">Лесные огоньки: история одной фотографии</h4>
             <p class="result__text">Фотограф отвлеклась от освещения суровой политической реальности Мексики, чтобы запечатлеть ускользающую красоту одного из местных чудес природы.</p>
             <p class="result__media">АФИША</p>
           </div>
           <div class="result__item">
-            <img src="<%=require('../images/image_08.jpg')%>" alt="image-6" class="result__image">
+            <img src="<%=require('../../images/image_04.jpg')%>" alt="image-6" class="result__image">
             <p class="result__date">2 августа, 2019</p>
             <h4 class="result__item-title">«Первозданная тайга»: новый фотопроект Игоря Шпиленка</h4>
             <p class="result__text">Знаменитый фотограф снимает первозданные леса России, чтобы рассказать о необходимости их сохранения. В этот раз он отправился в Двинско-Пинежскую тайгу, где...</p>
@@ -92,10 +92,10 @@
       </section>
 
       <section class="author">
-        <img src="<%=require('../blocks/author/__image/me.jpg')%>" alt="author" class="author__image">
+        <img src="<%=require('../../blocks/author/__image/me.jpg')%>" alt="author" class="author__image">
         <div class="author__about">
           <h3 class="author__title">Об авторе</h3>
-          <p class="author__info"> Это блок с описаением автора проекта. Здесь следует указать, как вас зовут, чем вы занимаетесь, какими технологиями разработки владете.</p>
+          <p class="author__info"> Это блок с описанием автора проекта. Здесь следует указать, как вас зовут, чем вы занимаетесь, какими технологиями разработки владете.</p>
           <p class="author__info">Также можно рассказать о процессе обучения в Практикуме, чему вы тут научились, и чем можете помочь потенциальным заказчикам</p>
         </div>
       </section>
@@ -105,21 +105,21 @@
     <footer class="footer">
       <p class="footer__copyright">&copy; 2019 Supersite</p>
       <nav class="footer__menu">
-        <a href="" class="footer__link link">Главная</a>
-        <a href="" class="footer__link link">О проекте</a>
-        <a href="" class="footer__link link">Яндекс.Практикум</a>
+        <a href="#" class="footer__link link">Главная</a>
+        <a href="../about.html" class="footer__link link">О проекте</a>
+        <a href="https://praktikum.yandex.ru" class="footer__link link" target="_blank">Яндекс.Практикум</a>
       </nav>
       <nav class="footer__social">
-        <a href="#" class="footer__icon link">
-          <img src="<%=require('../images/Git.jpg')%>" alt="GitHub">
+        <a href="https://github.com/zi-klon" class="footer__icon link" target="_blank">
+          <img src="<%=require('../../images/git.jpg')%>" alt="GitHub">
         </a>
-        <a href="#" class="footer__icon link">
-          <img src="<%=require('../images/vk.png')%>" alt="VKontakte">
+        <a href="https://vk.com/ziklon17" class="footer__icon link" target="_blank">
+          <img src="<%=require('../../images/vk.png')%>" alt="VKontakte">
         </a>
       </nav>
     </footer>
 
-    <script src="<%= htmlWebpackPlugin.files.chunks.main.entry %>"></script>
+    <script src="<%= htmlWebpackPlugin.files.chunks.index.entry %>"></script>
   </body>
 </html>
 
