--- a/src/analytics/analytics.html
+++ b/src/analytics/analytics.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Analytics</title>
     <link rel="stylesheet" href="<%=htmlWebpackPlugin.files.chunks.analytics.css %>">
-    <link rel="icon" href="">
+    <link rel="icon" href="<%=require('../../images/stat.png')%>">
   </head>
 
   <body class="body">
@@ -14,8 +14,8 @@
       <h2 class="header__title">NewsAnalyzer</h2>
       <div class="header__menu">
         <nav class="header__refs">
-          <a href="#" class="header__ref header__ref_grey link">Главная</a>
-          <a href="#" class="header__ref header__ref_grey link">О проекте</a>
+          <a href="../index.html" class="header__ref header__ref_grey header__ref_hover">Главная</a>
+          <a href="../about.html" class="header__ref header__ref_grey header__ref_hover">О проекте</a>
         </nav> 
         <div class="header__decor header__decor_right"></div>
         <div class="header__decor header__decor_left"></div>
@@ -24,10 +24,15 @@
     
     <main class="content">
       <section class="resume">
-        <h3 class="resume__pages">Главная/Аналитика</h3>
+        <nav class="resume__pages">
+          <a href="../index.html" class="resume__page link">Главная</a>
+          <a href="#" class="resume__page link">/ Аналитика</a>
+        </nav>
         <h2 class="resume__title">Вы спросили: &laquo;Путешествия&raquo;</h2>
-        <p class="resume__amount">Новостей за неделю: 34324</p>
-        <p class="resume__amount">Упоминаний в заголовках: 235</p>
+        <ul type="none" class="resume__list">
+          <li class="resume__element">Новостей за неделю:<span class="resume__bold"> 34324</span></li>
+          <li class="resume__element">Упоминаний в заголовках:<span class="resume__bold"> 235</span></li>
+        </ul>  
       </section>
 
       <section class="stat">
@@ -71,20 +76,20 @@
     <footer class="footer">
       <p class="footer__copyright">&copy; 2019 Supersite</p>
       <nav class="footer__menu">
-        <a href="" class="footer__link link">Главная</a>
-        <a href="" class="footer__link link">О проекте</a>
-        <a href="" class="footer__link link">Яндекс.Практикум</a>
+        <a href="../index.html" class="footer__link link">Главная</a>
+        <a href="../about.html" class="footer__link link">О проекте</a>
+        <a href="https://praktikum.yandex.ru" class="footer__link link" target="_blank">Яндекс.Практикум</a>
       </nav>
       <nav class="footer__social">
-        <a href="#" class="footer__icon link">
-          <img src="" alt="GitHub">
+        <a href="https://github.com/zi-klon" class="footer__icon link" target="_blank">
+          <img src="<%=require('../../images/git.jpg')%>" alt="GitHub">
         </a>
-        <a href="#" class="footer__icon link">
-          <img src="" alt="VKontakte">
+        <a href="https://vk.com/ziklon17" class="footer__icon link" target="_blank">
+          <img src="<%=require('../../images/vk.png')%>" alt="VKontakte">
         </a>
       </nav>
     </footer>
     
-    <script src="<%= htmlWebpackPlugin.files.chunks.analytics.entry %>"></script>
+    <script src="<%=htmlWebpackPlugin.files.chunks.analytics.entry %>"></script>
   </body>
 </html> 
