в swiper добавлен адаптив

--- a/src/about/about.html
+++ b/src/about/about.html
@@ -72,7 +72,8 @@
           <a href="#" class="result__ref link">Открыть в GitHub</a>
         </div>
         <div class="commits__container swiper-container">
-          <div class="swiper-wrapper">
+          <div class="commits__blur commits__blur_right"></div>
+          <div class="commits__blur commits__blur_left"></div>          <div class="swiper-wrapper">
             <div class="commits__commit swiper-slide">
               <p class="commits__date">14 августа 2019</p>
               <div class="commits__author-info">
