--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <meta name="keywords" content="HTML-5, CSS-3, JavaScript, ES6, Webpack, Git, gh-pages">
     <meta name="author" content="Михаил Данилов">
     <title>WhatsNew</title>
-    <link rel="stylesheet" href="./pages/index.93c5f7ffaa98f454b691.css?0eba74f2cf169d3cdb18">
-    <link rel="icon" href="./images/main.png">
+    <link rel="stylesheet" href="./pages/index.e232febd5d772a3a11a2.css?6c0d0e48f44d8b2c9f03">
+    <link rel="icon" href="../images/main.png">
   </head>
 
   <body class="body">
@@ -46,42 +46,42 @@
         </div>
         <div class="result__item-container">
           <div class="result__item">
-            <img src="./images/image_01.jpg" alt="image-1" class="result__image">
+            <img src="../images/image_01.jpg" alt="image-1" class="result__image">
             <p class="result__date">2 августа, 2019</p>
             <h4 class="result__item-title">Национальное достояние – парки</h4>
             <p class="result__text">В 2016 году Америка отмечала важный юбилей: сто лет назад здесь начала складываться система национальных парков – охраняемых территорий, где и сегодня каждый может приобщиться к природе.</p>
             <p class="result__media">ЛЕНТА.РУ</p>
           </div>
           <div class="result__item">
-            <img src="./images/image_05.jpg" alt="image-2" class="result__image">
+            <img src="../images/image_05.jpg" alt="image-2" class="result__image">
             <p class="result__date">2 августа, 2019</p>
             <h4 class="result__item-title">Лесные огоньки: история одной фотографии</h4>
             <p class="result__text">Фотограф отвлеклась от освещения суровой политической реальности Мексики, чтобы запечатлеть ускользающую красоту одного из местных чудес природы.</p>
             <p class="result__media">МЕДУЗА</p>
           </div>
           <div class="result__item">
-            <img src="./images/image_07.jpg" alt="image-3" class="result__image">
+            <img src="../images/image_07.jpg" alt="image-3" class="result__image">
             <p class="result__date">2 августа, 2019</p>
             <h4 class="result__item-title">«Первозданная тайга»: новый фотопроект Игоря Шпиленка</h4>
             <p class="result__text">Знаменитый фотограф снимает первозданные леса России, чтобы рассказать о необходимости их сохранения. В этот раз он отправился в Двинско-Пинежскую тайгу, где...</p>
             <p class="result__media">РИА</p>
           </div>
           <div class="result__item">
-            <img src="./images/image_06.jpg" alt="image-4" class="result__image">
+            <img src="../images/image_06.jpg" alt="image-4" class="result__image">
             <p class="result__date">2 августа, 2019</p>
             <h4 class="result__item-title">Национальное достояние – парки</h4>
             <p class="result__text">В 2016 году Америка отмечала важный юбилей: сто лет назад здесь начала складываться система национальных парков – охраняемых территорий, где и сегодня каждый может приобщиться к природе.</p>
             <p class="result__media">ДЗЕН</p>
           </div>
           <div class="result__item">
-            <img src="./images/image_08.jpg" alt="image-5" class="result__image">
+            <img src="../images/image_08.jpg" alt="image-5" class="result__image">
             <p class="result__date">2 августа, 2019</p>
             <h4 class="result__item-title">Лесные огоньки: история одной фотографии</h4>
             <p class="result__text">Фотограф отвлеклась от освещения суровой политической реальности Мексики, чтобы запечатлеть ускользающую красоту одного из местных чудес природы.</p>
             <p class="result__media">АФИША</p>
           </div>
           <div class="result__item">
-            <img src="./images/image_04.jpg" alt="image-6" class="result__image">
+            <img src="../images/image_04.jpg" alt="image-6" class="result__image">
             <p class="result__date">2 августа, 2019</p>
             <h4 class="result__item-title">«Первозданная тайга»: новый фотопроект Игоря Шпиленка</h4>
             <p class="result__text">Знаменитый фотограф снимает первозданные леса России, чтобы рассказать о необходимости их сохранения. В этот раз он отправился в Двинско-Пинежскую тайгу, где...</p>
@@ -92,7 +92,7 @@
       </section>
 
       <section class="author">
-        <img src="./images/me.jpg" alt="author" class="author__image">
+        <img src="../images/me.jpg" alt="author" class="author__image">
         <div class="author__about">
           <h3 class="author__title">Об авторе</h3>
           <p class="author__info"> Это блок с описанием автора проекта. Здесь следует указать, как вас зовут, чем вы занимаетесь, какими технологиями разработки владете.</p>
@@ -111,15 +111,15 @@
       </nav>
       <nav class="footer__social">
         <a href="https://github.com/zi-klon" class="footer__icon link" target="_blank">
-          <img src="./images/git.jpg" alt="GitHub">
+          <img src="../images/git.jpg" alt="GitHub">
         </a>
         <a href="https://vk.com/ziklon17" class="footer__icon link" target="_blank">
-          <img src="./images/vk.png" alt="VKontakte">
+          <img src="../images/vk.png" alt="VKontakte">
         </a>
       </nav>
     </footer>
 
-    <script src="./pages/index.6f7d061d25fbc9615d52.js?0eba74f2cf169d3cdb18"></script>
+    <script src="./pages/index.6f7d061d25fbc9615d52.js?6c0d0e48f44d8b2c9f03"></script>
   </body>
 </html>
 
