--- a/analytics.html
+++ b/analytics.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Analytics</title>
-    <link rel="stylesheet" href="./pages/analytics.93c5f7ffaa98f454b691.css?0eba74f2cf169d3cdb18">
-    <link rel="icon" href="./images/stat.png">
+    <link rel="stylesheet" href="./pages/analytics.e232febd5d772a3a11a2.css?6c0d0e48f44d8b2c9f03">
+    <link rel="icon" href="../images/stat.png">
   </head>
 
   <body class="body">
@@ -82,14 +82,14 @@
       </nav>
       <nav class="footer__social">
         <a href="https://github.com/zi-klon" class="footer__icon link" target="_blank">
-          <img src="./images/git.jpg" alt="GitHub">
+          <img src="../images/git.jpg" alt="GitHub">
         </a>
         <a href="https://vk.com/ziklon17" class="footer__icon link" target="_blank">
-          <img src="./images/vk.png" alt="VKontakte">
+          <img src="../images/vk.png" alt="VKontakte">
         </a>
       </nav>
     </footer>
     
-    <script src="./pages/analytics.6f7d061d25fbc9615d52.js?0eba74f2cf169d3cdb18"></script>
+    <script src="./pages/analytics.6f7d061d25fbc9615d52.js?6c0d0e48f44d8b2c9f03"></script>
   </body>
 </html> 
