--- a/analytics.html
+++ b/analytics.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Analytics</title>
-    <link rel="stylesheet" href="./pages/analytics.eef43cabe831d7a37b14.css?5feb7cddca04e172483d">
-    <link rel="icon" href="../images/stat.png">
+    <link rel="stylesheet" href="./pages/analytics.4ec0fa476c5f8f9c7b0a.css?a7ed387dec44567662b6">
+    <link rel="icon" href="./images/stat.png">
   </head>
 
   <body class="body">
@@ -82,14 +82,14 @@
       </nav>
       <nav class="footer__social">
         <a href="https://github.com/zi-klon" class="footer__icon link" target="_blank">
-          <img src="../images/git.jpg" alt="GitHub">
+          <img src="./images/git.jpg" alt="GitHub">
         </a>
         <a href="https://vk.com/ziklon17" class="footer__icon link" target="_blank">
-          <img src="../images/vk.png" alt="VKontakte">
+          <img src="./images/vk.png" alt="VKontakte">
         </a>
       </nav>
     </footer>
     
-    <script src="./pages/analytics.6f7d061d25fbc9615d52.js?5feb7cddca04e172483d"></script>
+    <script src="./pages/analytics.6f7d061d25fbc9615d52.js?a7ed387dec44567662b6"></script>
   </body>
 </html> 
