--- a/about.html
+++ b/about.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>About</title>
-    <link rel="stylesheet" href="./pages/about.1ce88233f9694f97c5f4.css?a7ed387dec44567662b6">
-    <link rel="icon" href="./images/about.png">
+    <link rel="stylesheet" href="./pages/about.753e74d2cd591c1a0683.css?5feb7cddca04e172483d">
+    <link rel="icon" href="../images/about.png">
   </head>
 
   <body class="body">
@@ -40,25 +40,25 @@
         <div class="technologies__container">
           <div class="technologies__item">
             <h3 class="technologies__item-title">HTML</h3>
-            <img src="./images/html5.png" alt="HTML-5" class="technologies__image">
+            <img src="../images/html5.png" alt="HTML-5" class="technologies__image">
           </div>
           <div class="technologies__item">
             <h3 class="technologies__item-title">CSS</h3>
-            <img src="./images/css3.png" alt="CSS-3" class="technologies__image">
+            <img src="../images/css3.png" alt="CSS-3" class="technologies__image">
           </div>
           <div class="technologies__item">
             <h3 class="technologies__item-title">JavaScript</h3>
-            <img src="./images/js.png" alt="JavaScript" class="technologies__image">
+            <img src="../images/js.png" alt="JavaScript" class="technologies__image">
           </div>
           <div class="technologies__item">
             <h3 class="technologies__item-title">Webpack</h3>
-            <img src="./images/wp.png" alt="Webpack" class="technologies__image">
+            <img src="../images/wp.png" alt="Webpack" class="technologies__image">
           </div>
         </div>
       </section>
 
       <section class="author">
-        <img src="./images/me.jpg" alt="author" class="author__image">
+        <img src="../images/me.jpg" alt="author" class="author__image">
         <div class="author__about">
           <h3 class="author__title">Об авторе</h3>
           <p class="author__info"> Это блок с описаением автора проекта. Здесь следует указать, как вас зовут, чем вы занимаетесь, какими технологиями разработки владете.</p>
@@ -77,7 +77,7 @@
             <div class="commits__commit swiper-slide">
               <p class="commits__date">14 августа 2019</p>
               <div class="commits__author-info">
-                <img src="./images/commit-01.png" class="commits__image"></img>
+                <img src="../images/commit-01.png" class="commits__image"></img>
                 <h3 class="commits__author">Антон Долинин</h3>
                 <h5 class="commits__mail">anton@yandex.ru</h5>
               </div>  
@@ -86,7 +86,7 @@
             <div class="commits__commit swiper-slide">
               <p class="commits__date">14 августа 2019</p>
               <div class="commits__author-info">
-                <img src="./images/commit-02.png" class="commits__image"></img>
+                <img src="../images/commit-02.png" class="commits__image"></img>
                 <h3 class="commits__author">Мария Фёдорова</h3>
                 <h5 class="commits__mail">mariiifed@yandex.ru</h5>
               </div>  
@@ -95,7 +95,7 @@
             <div class="commits__commit swiper-slide">
               <p class="commits__date">14 августа 2019</p>
               <div class="commits__author-info">
-                <img src="./images/commit-03.png" class="commits__image"></img>
+                <img src="../images/commit-03.png" class="commits__image"></img>
                 <h3 class="commits__author">Инга Иванова</h3>
                 <h5 class="commits__mail">ingaiva@yandex.ru</h5>
               </div>  
@@ -118,14 +118,14 @@
       </nav>
       <nav class="footer__social">
         <a href="https://github.com/zi-klon" class="footer__icon link" target="_blank">
-          <img src="./images/git.jpg" alt="GitHub">
+          <img src="../images/git.jpg" alt="GitHub">
         </a>
         <a href="https://vk.com/ziklon17" class="footer__icon link" target="_blank">
-          <img src="./images/vk.png" alt="VKontakte">
+          <img src="../images/vk.png" alt="VKontakte">
         </a>
       </nav>
     </footer>
 
-    <script src="./pages/about.69c76e4bf12e2b2d5f62.js?a7ed387dec44567662b6" type="module" ></script>
+    <script src="./pages/about.69c76e4bf12e2b2d5f62.js?5feb7cddca04e172483d" type="module" ></script>
   </body>
 </html>  
