--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>About</title>
-    <link rel="stylesheet" href="./pages/about.2042ca3937120225000d.css?b8931a4f6d3f08d1d0c4">
+    <link rel="stylesheet" href="./pages/about.2042ca3937120225000d.css?47061fb7edc3f78551f2">
     <link rel="icon" href="./images/about.png">
   </head>
 
@@ -14,7 +14,7 @@
       <h2 class="header__title">NewsAnalyzer</h2>
       <div class="header__menu">
         <nav class="header__refs">
-          <a href="../index.html" class="header__ref header__ref_grey link">Главная</a>
+          <a href="./index.html" class="header__ref header__ref_grey link">Главная</a>
           <a href="#" class="header__ref header__ref_black link">О проекте</a>
         </nav> 
         <div class="header__decor header__decor_right header__decor_black"></div>
@@ -112,7 +112,7 @@
     <footer class="footer">
       <p class="footer__copyright">&copy; 2019 Supersite</p>
       <nav class="footer__menu">
-        <a href="../index.html" class="footer__link link">Главная</a>
+        <a href="./index.html" class="footer__link link">Главная</a>
         <a href="#" class="footer__link link">О проекте</a>
         <a href="https://praktikum.yandex.ru" class="footer__link link" target="_blank">Яндекс.Практикум</a>
       </nav>
@@ -126,6 +126,6 @@
       </nav>
     </footer>
 
-    <script src="./pages/about.69c76e4bf12e2b2d5f62.js?b8931a4f6d3f08d1d0c4" type="module" ></script>
+    <script src="./pages/about.69c76e4bf12e2b2d5f62.js?47061fb7edc3f78551f2" type="module" ></script>
   </body>
 </html>  
