--- a/analytics.html
+++ b/analytics.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Analytics</title>
-    <link rel="stylesheet" href="./pages/analytics.992f668b67816e48855a.css?b8931a4f6d3f08d1d0c4">
+    <link rel="stylesheet" href="./pages/analytics.992f668b67816e48855a.css?47061fb7edc3f78551f2">
     <link rel="icon" href="./images/stat.png">
   </head>
 
@@ -14,8 +14,8 @@
       <h2 class="header__title">NewsAnalyzer</h2>
       <div class="header__menu">
         <nav class="header__refs">
-          <a href="../index.html" class="header__ref header__ref_grey header__ref_hover">Главная</a>
-          <a href="../about.html" class="header__ref header__ref_grey header__ref_hover">О проекте</a>
+          <a href="./index.html" class="header__ref header__ref_grey header__ref_hover">Главная</a>
+          <a href="./about.html" class="header__ref header__ref_grey header__ref_hover">О проекте</a>
         </nav> 
         <div class="header__decor header__decor_right"></div>
         <div class="header__decor header__decor_left"></div>
@@ -25,7 +25,7 @@
     <main class="content">
       <section class="resume">
         <nav class="resume__pages">
-          <a href="../index.html" class="resume__page link">Главная</a>
+          <a href="./index.html" class="resume__page link">Главная</a>
           <a href="#" class="resume__page link">/ Аналитика</a>
         </nav>
         <h2 class="resume__title">Вы спросили: &laquo;Путешествия&raquo;</h2>
@@ -76,8 +76,8 @@
     <footer class="footer">
       <p class="footer__copyright">&copy; 2019 Supersite</p>
       <nav class="footer__menu">
-        <a href="../index.html" class="footer__link link">Главная</a>
-        <a href="../about.html" class="footer__link link">О проекте</a>
+        <a href="./index.html" class="footer__link link">Главная</a>
+        <a href="./about.html" class="footer__link link">О проекте</a>
         <a href="https://praktikum.yandex.ru" class="footer__link link" target="_blank">Яндекс.Практикум</a>
       </nav>
       <nav class="footer__social">
@@ -90,6 +90,6 @@
       </nav>
     </footer>
     
-    <script src="./pages/analytics.6f7d061d25fbc9615d52.js?b8931a4f6d3f08d1d0c4"></script>
+    <script src="./pages/analytics.6f7d061d25fbc9615d52.js?47061fb7edc3f78551f2"></script>
   </body>
 </html> 
