--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="HTML-5, CSS-3, JavaScript, ES6, Webpack, Git, gh-pages">
     <meta name="author" content="Михаил Данилов">
     <title>WhatsNew</title>
-    <link rel="stylesheet" href="./pages/index.992f668b67816e48855a.css?b8931a4f6d3f08d1d0c4">
+    <link rel="stylesheet" href="./pages/index.992f668b67816e48855a.css?47061fb7edc3f78551f2">
     <link rel="icon" href="./images/main.png">
   </head>
 
@@ -19,7 +19,7 @@
       <div class="header__menu">
         <nav class="header__refs">
           <a href="#" class="header__ref link">Главная</a>
-          <a href="../about.html" class="header__ref header__ref_grey link">О проекте</a>
+          <a href="./about.html" class="header__ref header__ref_grey link">О проекте</a>
         </nav> 
         <div class="header__decor header__decor_right"></div>
         <div class="header__decor header__decor_white header__decor_left"></div>
@@ -42,7 +42,7 @@
       <section class="result">
         <div class="result__headers">
           <h3 class="result__title">Результаты поиска</h3>
-          <a href="../analytics.html" class="result__ref link">Посмотреть аналитику</a>
+          <a href="./analytics.html" class="result__ref link">Посмотреть аналитику</a>
         </div>
         <div class="result__item-container">
           <div class="result__item">
@@ -106,7 +106,7 @@
       <p class="footer__copyright">&copy; 2019 Supersite</p>
       <nav class="footer__menu">
         <a href="#" class="footer__link link">Главная</a>
-        <a href="../about.html" class="footer__link link">О проекте</a>
+        <a href="./about.html" class="footer__link link">О проекте</a>
         <a href="https://praktikum.yandex.ru" class="footer__link link" target="_blank">Яндекс.Практикум</a>
       </nav>
       <nav class="footer__social">
@@ -119,7 +119,7 @@
       </nav>
     </footer>
 
-    <script src="./pages/index.6f7d061d25fbc9615d52.js?b8931a4f6d3f08d1d0c4"></script>
+    <script src="./pages/index.6f7d061d25fbc9615d52.js?47061fb7edc3f78551f2"></script>
   </body>
 </html>
 
