Исправлена навигация по страницам

--- a/src/about/about.html
+++ b/src/about/about.html
@@ -14,7 +14,7 @@
       <h2 class="header__title">NewsAnalyzer</h2>
       <div class="header__menu">
         <nav class="header__refs">
-          <a href="../index.html" class="header__ref header__ref_grey link">Главная</a>
+          <a href="./index.html" class="header__ref header__ref_grey link">Главная</a>
           <a href="#" class="header__ref header__ref_black link">О проекте</a>
         </nav> 
         <div class="header__decor header__decor_right header__decor_black"></div>
@@ -112,7 +112,7 @@
     <footer class="footer">
       <p class="footer__copyright">&copy; 2019 Supersite</p>
       <nav class="footer__menu">
-        <a href="../index.html" class="footer__link link">Главная</a>
+        <a href="./index.html" class="footer__link link">Главная</a>
         <a href="#" class="footer__link link">О проекте</a>
         <a href="https://praktikum.yandex.ru" class="footer__link link" target="_blank">Яндекс.Практикум</a>
       </nav>
